Fixing layout shift, tweaks.

--- a/src/footer/footer.scss
+++ b/src/footer/footer.scss
@@ -36,8 +36,6 @@ $horizontal_breakpoint: 470px;
       bottom: 0;
       right: -10px;
       display: block;
-      width: 173px;
-      height: 173px;
       z-index: -1;
 
       @media all and (min-width: $horizontal_breakpoint) {
@@ -100,8 +98,6 @@ $horizontal_breakpoint: 470px;
     vertical-align: middle;
 
     img {
-      width: 42px;
-      height: 42px;
       vertical-align: middle;
       margin-right: 0.5rem;
     }
