--- a/src/self-taught/self-taught.scss
+++ b/src/self-taught/self-taught.scss
@@ -47,7 +47,6 @@ $dark: #353535;
     }
 
     img {
-      width: 170px;
       position: absolute;
       display: block;
       bottom: 0;
